--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.3.4",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -26,6 +27,7 @@
     "next": "14.2.5",
     "next-cloudinary": "^6.6.2",
     "next-themes": "^0.3.0",
+    "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
