refactor checkIfAdmin into own function, Added server action that adds a new product in the database, handle action in the form onSubmit in the store tab, used a mutation to add product and re-fetch existing products, implement toast on success

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "WillLuke.nextjs.addTypesOnSave": true,
+  "WillLuke.nextjs.hasPrompted": true
 }
